[project]
name = "deep-agents-workshop"
version = "0.1.0"
description = "A Deep Agents workshop — a research agent that curates arXiv papers into a podcast"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "deepagents>=0.5.3",
    "python-dotenv>=1.0.0",
    "jupyterlab>=4.5.7",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.0.0",
    "langgraph-cli[inmem]>=0.4.24",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "arxiv>=2.1.0",
    "tavily>=1.1.0",
]

[project.optional-dependencies]
# Swap providers by editing utils/models.py, then install the matching extra.
openai = ["langchain-openai>=1.2.1"]
anthropic = ["langchain-anthropic>=1.4.1"]
azure = ["azure-identity>=1.25.1"]
bedrock = ["langchain-aws>=1.4.5"]

[tool.setuptools]
packages = ["utils"]
